Fix unexpected thread 4 output, add mark, if file does not exists